// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API: LSK Transactions createTransactionObject creates a transaction object for delegate registration transaction 1`] = `
Object {
  "asset": Object {
    "username": "username",
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 5,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for reclaimLSK transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 1000,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for registerMultisignatureGroup transaction 1`] = `
Object {
  "asset": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          15,
          233,
          163,
          241,
          162,
          27,
          85,
          48,
          242,
          127,
          135,
          164,
          20,
          181,
          73,
          231,
          154,
          148,
          11,
          242,
          79,
          223,
          43,
          47,
          5,
          231,
          242,
          42,
          238,
          236,
          200,
          106,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          134,
          73,
          152,
          121,
          68,
          141,
          27,
          2,
          21,
          213,
          156,
          191,
          7,
          136,
          54,
          227,
          215,
          217,
          210,
          120,
          45,
          86,
          162,
          39,
          74,
          86,
          135,
          97,
          191,
          243,
          111,
          25,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [
      Object {
        "data": Array [
          250,
          185,
          210,
          97,
          234,
          5,
          11,
          158,
          50,
          109,
          126,
          17,
          88,
          126,
          204,
          195,
          67,
          162,
          14,
          100,
          226,
          157,
          135,
          129,
          181,
          15,
          208,
          102,
          131,
          202,
          204,
          136,
        ],
        "type": "Buffer",
      },
    ],
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 4,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for transfer transaction 1`] = `
Object {
  "asset": Object {
    "amount": 1n,
    "data": "test",
    "recipientAddress": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for vote transaction 1`] = `
Object {
  "asset": Object {
    "votes": Array [
      Object {
        "amount": 100n,
        "delegateAddress": Object {
          "data": Array [
            208,
            70,
            153,
            229,
            124,
            74,
            56,
            70,
            201,
            136,
            243,
            193,
            83,
            6,
            121,
            111,
            142,
            174,
            92,
            28,
          ],
          "type": "Buffer",
        },
      },
      Object {
        "amount": -100n,
        "delegateAddress": Object {
          "data": Array [
            183,
            120,
            252,
            149,
            185,
            240,
            116,
            7,
            230,
            64,
            157,
            115,
            200,
            175,
            25,
            25,
            217,
            3,
            80,
            2,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  "assetID": 1,
  "fee": 1000000n,
  "moduleID": 5,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions transformTransaction should a register delegate transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "username": "super_delegate",
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "5:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should a transfer transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "amount": "100000000",
    "data": "",
    "recipient": Object {
      "address": "lskzzzz3xu4xpzz6x2zzuzzbvzpz2zzrvz3zzxuzz3mzozzox24z2zzuzzzzzvuzz3z577dz7",
    },
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "2:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should a vote delegate transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "votes": Array [
      Object {
        "amount": 100,
        "delegateAddress": "lskzpxzckpryh",
      },
    ],
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "5:1",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should transform a reclaimLSK transaction 1`] = `
Object {
  "asset": Object {
    "amount": "100",
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "1000:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should transform a registerMultisignatureGroup transaction 1`] = `
Object {
  "asset": Object {
    "mandatoryKeys": Array [
      "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
      "86499879448d1b0215d59cbf078836e3d7d9d2782d56a2274a568761bff36f19",
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [
      "fab9d261ea050b9e326d7e11587eccc343a20e64e29d8781b50fd06683cacc88",
    ],
  },
  "fee": "1000000",
  "id": "12",
  "moduleAssetId": "4:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;
